--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
  border-radius:3px;
  box-shadow: 0 4px 2px -4px black;
  transition:all .5s ease;
+ -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
  .main .icon{
  font-size:27px;
@@ -105,6 +106,7 @@ list-style:none;
 text-decoration:none;
 position:relative;
 color:gray;
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .nav-items li a:before{
 content:'';
